# stochastic-warfare

./: .dockerignore  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.json
.claude/hooks/: force-background-tests.sh
.github/workflows/: benchmark.yml  build.yml  docs.yml  lint.yml  test.yml
api/: __init__.py  __main__.py  config.py  database.py  dependencies.py  main.py  run_manager.py  scenarios.py  schemas.py
api/routers/: analysis.py  analytics.py  meta.py  runs.py  scenarios.py  units.py
brainstorm/: index.html
brainstorm-block10/: index.html
brainstorm-block2/: index.html
brainstorm-block3/: index.html
brainstorm-block4/: index.html
brainstorm-block5/: index.html
brainstorm-block6/: index.html
brainstorm-block7/: index.html
brainstorm-block8/: index.html
brainstorm-block9/: index.html
brainstorm-post-mvp/: index.html
concepts/architecture/: index.html
concepts/models/: index.html
data/commander_profiles/: aggressive_armor.yaml  air_superiority.yaml  balanced_default.yaml  cautious_infantry.yaml  desperate_defender.yaml  insurgent_leader.yaml  joint_campaign.yaml  logistics_sustainment.yaml  naval_aviation.yaml  naval_surface.yaml  pmc_operator.yaml  ruthless_authoritarian.yaml  sof_operator.yaml
data/comms/: fbcb2_data.yaml  field_wire.yaml  harris_hf.yaml  link11.yaml  link16.yaml  satcom_uhf.yaml  sincgars_vhf.yaml  vlf_receiver.yaml
data/escalation/: cold_war_nuclear_thresholds.yaml  conventional_only.yaml  failed_state_thresholds.yaml  nato_article5.yaml  peer_competitor.yaml
data/schools/: air_power.yaml  airland_battle.yaml  attrition.yaml  clausewitzian.yaml  deep_battle.yaml  maneuverist.yaml  maritime_corbettian.yaml  maritime_mahanian.yaml  sun_tzu.yaml
data/sensors/: 1s91_straight_flush.yaml  aaq33_sniper.yaml  active_ir_sight.yaml  active_sonar.yaml  air_search_radar.yaml  apg68_radar.yaml  apq94_radar.yaml  apy1_radar.yaml  beam_riding_tracker.yaml  esm_suite.yaml  ground_search_radar.yaml  laser_warning_receiver.yaml  mk1_eyeball.yaml  nvg.yaml  passive_sonar.yaml  sqr19_towed_array.yaml  thermal_sight.yaml  uv_maws.yaml
data/signatures/: a4_skyhawk.yaml  ah64d.yaml  b52h.yaml  bmp1.yaml  bmp2.yaml  btr80.yaml  c17.yaml  challenger2.yaml  civilian_noncombatant.yaml  ddg51.yaml  ddg_helios.yaml  de_shorad.yaml  ea18g.yaml  engineer_squad.yaml  f16c.yaml  glws_dazzler.yaml  hemtt.yaml  insurgent_squad.yaml  iraqi_republican_guard.yaml  iron_beam.yaml  j10a.yaml  javelin_team.yaml  kilo636.yaml  kornet_team.yaml  leopard2a6.yaml  lhd1.yaml  m109a6.yaml  m1a1.yaml  m1a2.yaml  m3a2_bradley.yaml  mi24v.yaml  mig29a.yaml  mq9.yaml  patriot.yaml  phaser_hpm.yaml  ranger_plt.yaml  s300pmu.yaml  sa11_buk.yaml  sa6_gainful.yaml  sea_harrier.yaml  (+13 more)
data/units/: civilian_noncombatant.yaml
development-phases/: index.html
development-phases-block10/: index.html
development-phases-block2/: index.html
development-phases-block3/: index.html
development-phases-block4/: index.html
development-phases-block5/: index.html
development-phases-block6/: index.html
development-phases-block7/: index.html
development-phases-block8/: index.html
development-phases-block9/: index.html
development-phases-post-mvp/: index.html
devlog/: index.html
devlog/phase-0/: index.html
devlog/phase-1/: index.html
devlog/phase-10/: index.html
devlog/phase-11/: index.html
devlog/phase-12/: index.html
devlog/phase-13/: index.html
devlog/phase-14/: index.html
devlog/phase-15/: index.html
devlog/phase-16/: index.html
devlog/phase-17/: index.html
devlog/phase-18/: index.html
devlog/phase-19/: index.html
devlog/phase-2/: index.html
devlog/phase-20/: index.html
devlog/phase-21/: index.html
devlog/phase-22/: index.html
devlog/phase-23/: index.html
devlog/phase-24/: index.html
devlog/phase-25/: index.html
devlog/phase-26/: index.html
devlog/phase-27/: index.html
devlog/phase-28/: index.html
devlog/phase-28.5/: index.html
devlog/phase-29/: index.html
devlog/phase-3/: index.html
devlog/phase-30/: index.html
devlog/phase-31/: index.html
devlog/phase-32/: index.html
devlog/phase-33/: index.html
devlog/phase-34/: index.html
devlog/phase-35/: index.html
devlog/phase-36/: index.html
devlog/phase-37/: index.html
devlog/phase-38/: index.html
devlog/phase-39/: index.html
devlog/phase-4/: index.html
devlog/phase-40/: index.html
devlog/phase-41/: index.html
devlog/phase-42/: index.html
docs/: brainstorm-block10.md  brainstorm-block2.md  brainstorm-block3.md  brainstorm-block4.md  brainstorm-block5.md  brainstorm-block6.md  brainstorm-block7.md  brainstorm-block8.md  brainstorm-block9.md  brainstorm-post-mvp.md  brainstorm.md  development-phases-block10.md  development-phases-block2.md  development-phases-block3.md  development-phases-block4.md  development-phases-block5.md  development-phases-block6.md  development-phases-block7.md  development-phases-block8.md  development-phases-block9.md  development-phases-post-mvp.md  development-phases.md  index.md  skills-and-hooks.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: check_scenarios.py  check_yaml.py  debug_scenario.py  dev.ps1  dev.sh  download_terrain.py  evaluate_scenarios.py  profile_golan.py  test_run_scenario.py  validate_scenario_data.py
search/: search_index.json
skills-and-hooks/: index.html
stochastic_warfare/: __init__.py
tests/: conftest.py
(+1794 files in other folders)
