[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stochastic-warfare"
version = "0.1.0"
description = "High-fidelity stochastic wargame simulator"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.0",
    "pyproj>=3.6",
    "pyyaml>=6.0",
    "shapely>=2.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "matplotlib>=3.8",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]
perf = [
    "numba>=0.59",
]
mcp = [
    "mcp[cli]>=1.2.0",
]
terrain = [
    "rasterio>=1.3",
    "xarray>=2024.1",
]
docs = [
    "mkdocs-material>=9.5",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
strict_markers = true
addopts = "-m 'not slow and not benchmark and not terrain and not api and not e2e'"
markers = [
    "slow: marks tests as slow (1000-run Monte Carlo, run explicitly with '-m slow')",
    "benchmark: marks tests as performance benchmarks (run explicitly with '-m benchmark')",
    "terrain: marks tests requiring downloaded terrain data (run explicitly with '-m terrain')",
    "api: marks API tests (require api extra)",
    "e2e: marks end-to-end tests running full scenarios via API (run explicitly with '-m e2e')",
]

[project.scripts]
stochastic-warfare-mcp = "stochastic_warfare.tools.mcp_server:main"
stochastic-warfare-api = "api.main:run"

[tool.setuptools.packages.find]
include = ["stochastic_warfare*", "api*"]
